--- a/cPadrão/Padrão_Completo_Delta.ipynb
+++ b/cPadrão/Padrão_Completo_Delta.ipynb
@@ -40,16 +40,16 @@
     "from ipywidgets import interact\n",
     "\n",
     "def escrever_excel(dfa, nome):\n",
-    "    dfa.to_excel('D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_06_2023\\\\testes\\\\%s.xlsx' %nome, index=False)\n",
+    "    dfa.to_excel(f'D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_06_2023\\\\testes\\\\{nome}.xlsx', index=False)\n",
     "    \n",
     "def escrever_csv(dfa, nome):\n",
-    "    dfa.to_csv('D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_06_2023\\\\testes\\\\%s.csv' %nome, index=False)\n",
+    "    dfa.to_csv(f'D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_06_2023\\\\testes\\\\{nome}.csv', index=False)\n",
     "    \n",
     "def escrever_txt(dfa, nome):\n",
-    "    dfa.to_csv('D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_06_2023\\\\testes\\\\%s.txt' %nome, sep='\\t', index=False, header=False)\n",
+    "    dfa.to_csv(f'D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_06_2023\\\\testes\\\\{nome}.txt', sep='\\t', index=False, header=False)\n",
     "    \n",
     "def ler_json(ficheiro):\n",
-    "    with open('D:\\\\B&N Dados\\\\Delta\\\\%s.json' %ficheiro, 'r') as file:\n",
+    "    with open(f'D:\\\\B&N Dados\\\\Delta\\\\{ficheiro}.json', 'r') as file:\n",
     "        mapa = json.load(file)\n",
     "    return mapa"
    ]
@@ -439,7 +439,7 @@
     "dfRepos=pd.read_excel(\"D:\\\\B&N Dados\\\\Delta\\\\Reposição_Sonae_Código.xlsx\")\n",
     "\n",
     "# Criar coluna que determina quais lojas têm reposição\n",
-    "dfNinjas['Reposição'] = [1 if val in dfRepos['STORE'].values else 0 for val in dfNinjas['STORE']]"
+    "dfNinjas['Repos'] = [1 if val in dfRepos['STORE'].values else 0 for val in dfNinjas['STORE']]"
    ]
   },
   {
@@ -562,7 +562,7 @@
    "source": [
     "# Definir coluna de Balanço (razão entre sellout e stock total)\n",
     "\n",
-    "dfFinal1[\"Balanço\"] = dfFinal1[\"SELLOUT\"] / dfFinal1[\"STK\"]"
+    "dfFinal1[\"Balance\"] = dfFinal1[\"SELLOUT\"] / dfFinal1[\"STK\"]"
    ]
   },
   {
@@ -646,7 +646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfFinal1[\"Adequação\"] = np.where(\n",
+    "dfFinal1[\"Adequacao\"] = np.where(\n",
     "                        dfFinal1[\"Ciclos\"] > 1.1,\n",
     "                        \"Stock Suficiente\",\n",
     "                       np.where(\n",
@@ -948,7 +948,7 @@
     "for i in produtos:\n",
     "    stock  = \"STOCK %s\" % i\n",
     "    preslinear = \"PRESLINEAR %s\" % i\n",
-    "    pre_rotura= \"PRÉ-ROTURA %s\" % i\n",
+    "    pre_rotura= \"PRE-ROTURA %s\" % i\n",
     "    \n",
     "    dfFinal2[pre_rotura] = (dfFinal2[stock] < dfFinal2[preslinear]).astype(int)"
    ]
@@ -1039,7 +1039,7 @@
     "           3: \"Stock Insuf c Forn Desadequado\"}\n",
     "\n",
     "for i in produtos:\n",
-    "    adequa = \"ADEQUAÇÃO %s\" % i\n",
+    "    adequa = \"ADEQUACAO %s\" % i\n",
     "    ciclos = \"CICLO %s\" % i\n",
     "    transito = \"INTRANSIT %s\" % i\n",
     "    esperado = \"EXPECTED %s\" % i\n",
@@ -1283,10 +1283,10 @@
     "# Definir se os produtos têm reposição\n",
     "\n",
     "# Sim\n",
-    "df_ComRep = dfFinal3[dfFinal3[\"Reposição\"] == 1]\n",
+    "df_ComRep = dfFinal3[dfFinal3[\"Repos\"] == 1]\n",
     "\n",
     "# Não\n",
-    "df_SemRep = dfFinal3[dfFinal3[\"Reposição\"] == 0]"
+    "df_SemRep = dfFinal3[dfFinal3[\"Repos\"] == 0]"
    ]
   },
   {
@@ -1310,14 +1310,14 @@
     "\n",
     "# Mudanças para ficar legível\n",
     "df_Classic_ComRepo = df_Classic_ComRepo.reset_index()\n",
-    "df_Classic_ComRepo = df_Classic_ComRepo.rename(columns={'index': 'Produto', 0: 'Frequência'})"
+    "df_Classic_ComRepo = df_Classic_ComRepo.rename(columns={'index': 'Produto', 0: 'Frequencia'})"
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "fig = px.bar(df_Classic_ComRepo, x='Produto', y='Frequência', title='Classic')\n",
+    "fig = px.bar(df_Classic_ComRepo, x='Produto', y='Frequencia', title='Classic')\n",
     "fig.show()"
    ]
   },
@@ -1342,14 +1342,14 @@
     "\n",
     "# Mudanças para ficar legível\n",
     "df_Classic_SemRepo = df_Classic_SemRepo.reset_index()\n",
-    "df_Classic_SemRepo = df_Classic_SemRepo.rename(columns={'index': 'Produto', 0: 'Frequência'})"
+    "df_Classic_SemRepo = df_Classic_SemRepo.rename(columns={'index': 'Produto', 0: 'Frequencia'})"
    ]
   },
   {
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "fig = px.bar(df_Classic_SemRepo, x='Produto', y='Frequência', title='Classic')\n",
+    "fig = px.bar(df_Classic_SemRepo, x='Produto', y='Frequencia', title='Classic')\n",
     "fig.show()"
    ]
   },
@@ -1375,12 +1375,12 @@
    "source": [
     "# com reposição\n",
     "dfFinal3[\"Num_ProdutosRep\"] = np.nan\n",
-    "dfFinal3.loc[dfFinal3['Reposição'] == 1, 'Num_ProdutosRep'] = dfFinal3[\"Num_Produtos\"]\n",
+    "dfFinal3.loc[dfFinal3['Repos'] == 1, 'Num_ProdutosRep'] = dfFinal3[\"Num_Produtos\"]\n",
     "\n",
     "\n",
     "# sem reposição\n",
     "dfFinal3[\"Num_ProdutosNRep\"] = np.nan\n",
-    "dfFinal3.loc[dfFinal3['Reposição'] == 0, 'Num_ProdutosNRep'] = dfFinal3[\"Num_Produtos\"]\n",
+    "dfFinal3.loc[dfFinal3['Repos'] == 0, 'Num_ProdutosNRep'] = dfFinal3[\"Num_Produtos\"]\n",
     "\n",
     "# Coluna para ter o número de produtos contratados pela marca\n",
     "dfFinal3[\"Produtos_Contratados\"] = dfFinal3[produtos].notna().sum(axis=1)"
@@ -1435,8 +1435,8 @@
     "# Passar para dataframe\n",
     "df_Rot = df_RotMed.to_frame()\n",
     "df_Rot = df_Rot.reset_index()\n",
-    "df_Rot = df_Rot.rename(columns={'index': 'Produto', 0: 'Frequência'})\n",
-    "df_Rot[\"Frequência\"] = df_Rot[\"Frequência\"]*100"
+    "df_Rot = df_Rot.rename(columns={'index': 'Produto', 0: 'Frequencia'})\n",
+    "df_Rot[\"Frequencia\"] = df_Rot[\"Frequencia\"]*100"
    ]
   },
   {
