--- a/cStocks/cStocksTotal/3_Stocks_Delta_2023-ML.ipynb
+++ b/cStocks/cStocksTotal/3_Stocks_Delta_2023-ML.ipynb
@@ -74,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -612,7 +614,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1935,6 +1939,119 @@
     "                  oi[\"DATA\"].between(\"2023-04-21\", \"2023-04-23\") |\n",
     "                  oi[\"DATA\"].between(\"2023-04-28\", \"2023-04-30\") |\n",
     "                  oi[\"DATA\"].between(\"2023-05-05\", \"2023-05-07\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clickhouse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import clickhouse_connect\n",
+    "from clickhouse_driver import Client\n",
+    "from unidecode import unidecode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Estabelecer a base a ser lida\n",
+    "\n",
+    "baseCH = dfFinal.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "client = clickhouse_connect.get_client(host='e28fluocjc.europe-west4.gcp.clickhouse.cloud', \n",
+    "                                       port=8443, \n",
+    "                                       username='default', \n",
+    "                                       password='N_Mx30OFTC1hN',\n",
+    "                                       database='Delta')\n",
+    "\n",
+    "\n",
+    "\n",
+    "###\n",
+    "baseCH['DATA']= pd.to_datetime(baseCH['DATA'], format='%Y-%m-%d')  # Passar para datetime\n",
+    "new_columns = [unidecode(col) for col in baseCH.columns]           # Tirar acentos e afins\n",
+    "baseCH.columns = new_columns                                       # Aplicar alterações da linha anterior\n",
+    "###\n",
+    "\n",
+    "# Tipos de dados\n",
+    "data = [\"DATA\"]\n",
+    "texto = [col for col in baseCH.columns if baseCH[col].dtype == 'object']\n",
+    "inteiros = [col for col in baseCH.columns if baseCH[col].dtype == 'int64']\n",
+    "floats = [col for col in baseCH.columns if baseCH[col].dtype == 'float64']\n",
+    "\n",
+    "\n",
+    "# Só floats é que permitem missing values\n",
+    "for col_name in inteiros:\n",
+    "    baseCH[col_name] = baseCH[col_name].astype(float)\n",
+    "# Missing values em strings estragam tudo\n",
+    "baseCH[texto] = baseCH[texto].fillna(\"-\")\n",
+    "\n",
+    "\n",
+    "def schema(lista, tipo):\n",
+    "    result_list = [f\"{element} {tipo}\" for element in lista]\n",
+    "    return result_list\n",
+    "\n",
+    "data1 = schema(data, \"Date\")\n",
+    "texto1 = schema(texto, \"String\")\n",
+    "inteiros1 = schema(inteiros, \"Float64\")\n",
+    "floats1 = schema(floats, \"Float64\")\n",
+    "total = tuple(data1 + texto1 + inteiros1 + floats1)\n",
+    "\n",
+    "schema = ', '.join([column.replace(\"'\", \"\") for column in total])\n",
+    "\n",
+    "# Split the input string by commas\n",
+    "parts = schema.split(', ')\n",
+    "# Process each part and wrap the first word in double quotes\n",
+    "output_parts = []\n",
+    "for part in parts:\n",
+    "    words = part.split()\n",
+    "    if words:\n",
+    "        first_word = words[0]\n",
+    "        remaining_words = ' '.join(words[1:])\n",
+    "        output_part = f'\"{first_word}\" {remaining_words}'\n",
+    "        output_parts.append(output_part)\n",
+    "# Join the modified parts back into a string\n",
+    "schema = ', '.join(output_parts)\n",
+    "\n",
+    "tabela = \"Daily\"\n",
+    "\n",
+    "# Eliminar tabela no CH\n",
+    "client.command(f'DROP TABLE IF EXISTS {tabela}')\n",
+    "\n",
+    "# Criar tabela no CH\n",
+    "client.command(f'''\n",
+    "    CREATE TABLE IF NOT EXISTS {tabela} (\n",
+    "        {schema}\n",
+    "        ) ENGINE = MergeTree\n",
+    "        ORDER BY (DATA)\n",
+    "''')\n",
+    "\n",
+    "client.insert_df(tabela, baseCH, column_names=baseCH.columns.tolist())"
    ]
   }
  ],
