--- a/cPadrão/0_Stocks_2022.ipynb
+++ b/cPadrão/0_Stocks_2022.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +41,10 @@
     "import json\n",
     "\n",
     "def escrever_excel(dfa, nome):\n",
-    "    dfa.to_excel(f'{nome}.xlsx' , index=False)\n",
+    "    dfa.to_excel(f'D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_08_2023\\\\{nome}.xlsx' , index=False)\n",
     "    \n",
     "def escrever_csv(dfa, nome):\n",
-    "    dfa.to_csv(f'{nome}.csv', index=False)\n",
+    "    dfa.to_csv(f'D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_08_2023\\\\{nome}.csv', index=False)\n",
     "    \n",
     "def escrever_json(dicionario, ficheiro):\n",
     "    with open(f'D:\\\\B&N Dados\\\\Delta\\\\{ficheiro}.json' , 'w') as file:\n",
@@ -76,8 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 14.8 s\n",
-      "Wall time: 18.5 s\n"
+      "CPU times: total: 17.7 s\n",
+      "Wall time: 20.2 s\n"
      ]
     }
    ],
@@ -158,13 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ler ficheiro para dataframe\n",
-    "df_produtos = pd.read_csv('D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_07_2023\\\\produtos.txt', header=None)\n",
-    "df_lojas = pd.read_csv('D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_07_2023\\\\lojas.txt', header=None)\n",
+    "df_produtos = pd.read_csv('D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_08_2023\\\\produtos.txt', header=None)\n",
+    "df_lojas = pd.read_csv('D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\Padrão_08_2023\\\\lojas.txt', header=None)\n",
     "\n",
     "# Passar para uma lista\n",
     "produtos = df_produtos[0].tolist()\n",
@@ -182,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfFinal=dfFinal.loc[(dfFinal['DATA'] >= '2022-04-22') & (dfFinal['DATA'] <= '2022-05-24')].copy()"
+    "dfFinal=dfFinal.loc[(dfFinal['DATA'] >= '2022-08-19') & (dfFinal['DATA'] <= '2022-08-21')].copy()"
    ]
   },
   {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
