Commit para mudar PC

--- a/cPiloto/1PilotoLong.ipynb
+++ b/cPiloto/1PilotoLong.ipynb
@@ -282,9 +282,9 @@
     "import itertools\n",
     "\n",
     "# Definir variáveis para cada coluna\n",
-    "dates = dfNinjas[\"DATA\"].unique()\n",
-    "stores = dfNinjas[\"STORE\"].unique()\n",
-    "desc_artigos = dfDelta[\"DESC_ARTIGO\"].unique()\n",
+    "dates = dfNinjasLong[\"DATA\"].unique()\n",
+    "stores = dfNinjasLong[\"STORE\"].unique()\n",
+    "desc_artigos = dfNinjasLong[\"DESC_ARTIGO\"].unique()\n",
     "\n",
     "# Criar todas as combinações possíveis\n",
     "combinations = list(itertools.product(dates, stores, desc_artigos))\n",
