--- a/cPadrão/Padrão_Completo_Delta.ipynb
+++ b/cPadrão/Padrão_Completo_Delta.ipynb
@@ -163,7 +163,7 @@
     "    dataframes.append(df)\n",
     "    \n",
     "dfNinjas = pd.concat(dataframes, ignore_index=True)\n",
-    "dfNinjas = dfNinjas.rename(columns={' Data de Resposta': 'DATA', \"Código da loja\":\"STORE\", \"Nome da Loja\":\"Loja\"})\n",
+    "dfNinjas = dfNinjas.rename(columns={'Data de Resposta': 'DATA', \"Código da loja\":\"STORE\", \"Nome da Loja\":\"Loja\"})\n",
     "\n",
     "#dfNinjas = dfNinjas.rename(columns=lambda x: mapa_produtos2.get(x, x))\n",
     "\n",
@@ -173,7 +173,9 @@
     "dfNinjas['DATA'] = pd.to_datetime(dfNinjas['DATA'], format='%d-%m-%Y') \n",
     "\n",
     "# se xlsb\n",
-    "#dfNinjas['DATA'] = pd.to_datetime(dfNinjas['DATA'], unit='d', origin=datetime.datetime(1899, 12, 30)) "
+    "#dfNinjas['DATA'] = pd.to_datetime(dfNinjas['DATA'], unit='d', origin=datetime.datetime(1899, 12, 30)) \n",
+    "\n",
+    "dfNinjas = dfNinjas.dropna(how = \"all\")"
    ]
   },
   {
