--- a/Produto_Final/1. DiárioCH.ipynb
+++ b/Produto_Final/1. DiárioCH.ipynb
@@ -37,17 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 484 ms\n",
-      "Wall time: 548 ms\n"
+      "CPU times: total: 0 ns\n",
+      "Wall time: 13 ms\n"
      ]
     }
    ],
@@ -82,10 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import clickhouse_connect\n",
     "client = clickhouse_connect.get_client(host='ch.brandsandninjas.com', \n",
     "                                       port=443, \n",
     "                                       username='chninja', \n",
@@ -515,19 +516,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3814077540.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[8], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    > - Volatilidade\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "> - Volatilidade\n",
     "> - Rotura \n",
@@ -583,10 +573,10 @@
     "                                                     .transform(lambda x: x.rolling(window=i, min_periods=1).mean()))\n",
     "\n",
     "    dfFinal[f\"Vendas_Perdidas_em_{i}_Dias\"] = ((dfFinal.groupby(['DESC_ARTIGO', \"STORE\"])['ROTURA_fds_1_Dias_Antes'].transform(lambda x: x.rolling(window=i, min_periods=1).sum())\\\n",
-    "                                                  * dfFinal.groupby(['DESC_ARTIGO', \"STORE\"])['SELLOUT_fds_1_Dias_Antes'].transform(lambda x: x.rolling(window=i, min_periods=1).median())) \\\n",
+    "                                                  * dfFinal.groupby(['DESC_ARTIGO', \"STORE\"])['SELLOUT_fds_1_Dias_Antes'].transform(lambda x: x.rolling(window=i, min_periods=1).mean())) \\\n",
     "                                                  + \n",
     "                                               (dfFinal.groupby(['DESC_ARTIGO', \"STORE\"])['ROTURA_semana_1_Dias_Antes'].transform(lambda x: x.rolling(window=i, min_periods=1).sum()) \\\n",
-    "                                                  * dfFinal.groupby(['DESC_ARTIGO', \"STORE\"])['SELLOUT_semana_1_Dias_Antes'].transform(lambda x: x.rolling(window=i, min_periods=1).median())))\n",
+    "                                                  * dfFinal.groupby(['DESC_ARTIGO', \"STORE\"])['SELLOUT_semana_1_Dias_Antes'].transform(lambda x: x.rolling(window=i, min_periods=1).mean())))\n",
     "    "
    ]
   },
@@ -877,33 +867,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ficheiro Dia\n",
-    "BaseDeltaDia = dfFinal[dfFinal.DATA == dfFinal.DATA.unique()[-1]].copy()\n",
-    "\n",
-    "# Ficheiro Mês\n",
-    "BaseDeltaMes = dfFinal[dfFinal.DATA >= dfFinal.DATA.unique()[-30]].copy()\n",
-    "\n",
     "# Ficheiro 180 dias\n",
-    "BaseDelta180Dias = dfFinal[dfFinal.DATA >= dfFinal.DATA.unique()[-180]].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "180"
-      ]
-     },
-     "execution_count": 293,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "dfEscrever120 = dfFinal[dfFinal.DATA.between(dfFinal.DATA.unique()[-121],dfFinal.DATA.unique()[-2])].copy()\n",
+    "\n",
     "len(dfFinal.DATA.unique())"
    ]
   },
@@ -912,6 +878,15 @@
    "metadata": {},
    "source": [
     "- Passar para csv"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "escrever_csv(dfEscreverDia, \"DataBaseDeltaDia\")\n",
+    "escrever_csv(dfEscreverMes, \"DataBaseDeltaMes\")\n",
+    "escrever_csv(dfEscrever180, \"DataBaseDelta180Dias\")"
    ]
   },
   {
@@ -934,26 +909,22 @@
     "client = clickhouse_connect.get_client(host='ch.brandsandninjas.com', \n",
     "                                       port=443, \n",
     "                                       username='chninja', \n",
-    "                                       password='ku43ueqnB5Q0AYb2C4FsJRTc7qX')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 298,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Estabelecer a base a ser lida\n",
+    "                                       password='ku43ueqnB5Q0AYb2C4FsJRTc7qX')\n",
     "\n",
-    "baseCH = BaseDeltaDia.copy()\n",
-    "#2023\n",
-    "tabela = \"BaseDeltaDia\""
+    "\n",
+    "# Estabelecer a base a ser lida\n",
+    "baseCH = dfEscrever120.copy()\n",
+    "\n",
+    "# Estabelecer a tabela a ser criada\n",
+    "tabela = \"Delta_120dias\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 299,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1033,53 +1004,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\\"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "  \\"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "    \\"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "      \\"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "      /"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "    /"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "  /"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "/"
+   ]
   }
  ],
  "metadata": {
