Será que dá pull?

--- a/Sonae/Produto_Final/1. DiárioCH.ipynb
+++ b/Sonae/Produto_Final/1. DiárioCH.ipynb
@@ -4,35 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resumo do código\n",
+    "# <center> Resumo do código</center>\n",
     "\n",
-    "### <u>Código que gera os ficheiros para estudo do comportamento da Delta</u>\n",
+    "### <u>Código que pega no ficheiro do dia e integra na base de 120 dias no Clickhouse</u>\n",
     "---\n",
-    "O objectivo é receber dados da Delta e devolver um conjunto de métricas para prever roturas. Devolve um ficheiro que pode entrar no código 1 para juntar aos dados dos ninjas.\n",
+    "O objectivo é receber dados da Delta do dia actual, integrá-lo com a base que está no Clickhouse e voltar a pôr a base actualizada.\n",
     "\n",
     "---\n",
     "- Inputs\n",
     "\n",
-    "> __Dados completos da Delta em pastas de ficheiros__ (de azul a verde)\n",
-    "> - Stocks e trânsito, Sellout do dia anterior\n",
-    "\n",
-    "                    ou\n",
-    "\n",
-    "> __Ficheiro já completo__ (de vermelho a verde)\n",
+    "> __Ficheiro que a Delta recebe da Sonae__ \n",
     "> - Stocks e trânsito, Sellout do dia anterior\n",
     "\n",
     "- Outputs\n",
     "\n",
-    "> __Ficheiro com produtos em causa__ em formato Long\n",
-    "\n",
-    "> __Métricas novas:__\n",
-    "> - Roturas de Stock e Pré-rotura\n",
+    "> __Base 120 dias no Clickhouse__<br>\n",
+    "> _Métricas Relevantes:_\n",
+    "> - Rotura e Pré-rotura\n",
     "> - Sinal\n",
     "> - Ciclos e Adequação de Stock\n",
-    "> - MSA (média de sellouts 10 dias antes)\n",
-    "> - STK (Stock disponível + trânsito)\n",
-    "> - (Novo) Balanço médio, mediano, liberal e conservador \n",
-    "> - (Novo) Dias para a rotura de stock e de prateleira\n"
+    "> - Smart Balance\n"
    ]
   },
   {
@@ -56,7 +47,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime\n",
-    "import clickhouse_connect"
+    "import clickhouse_connect\n",
+    "\n",
+    "def escrever_excel(dfa, nome):\n",
+    "    dfa.to_excel(f'C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\2.Delta\\\\Sonae\\\\Testes\\\\{nome}.xlsx', index=False)\n",
+    "    \n",
+    "def escrever_csv(dfa, nome):\n",
+    "    dfa.to_csv(f'C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\2.Delta\\\\Sonae\\\\Testes\\\\{nome}.csv', index=False)"
    ]
   },
   {
@@ -434,7 +431,7 @@
     "    \n",
     "    dfFinal.loc[:,'%s_%s_Dias_Antes' % (\"Balance\", i)] = valores\n",
     "    \n",
-    "    "
+    "dfFinal.loc[dfFinal.STK == 0, \"Balance\"] = 2"
    ]
   },
   {
@@ -1002,62 +999,6 @@
     "\n",
     "client.insert_df(tabela, baseCH, column_names=baseCH.columns.tolist())"
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "\\"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "  \\"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "    \\"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "      \\"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "      /"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "    /"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "  /"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "/"
-   ]
   }
  ],
  "metadata": {
@@ -1076,7 +1017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
