--- a/Sonae/Produto_Final/2. Com_e_Sem_Fotos.ipynb
+++ b/Sonae/Produto_Final/2. Com_e_Sem_Fotos.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center>Só Ninjas</center>\n",
+    "## <center>Só Ninjas</center>\n",
     "\n",
-    "## <center><u>``Resumo do código``</u></center>\n",
+    "# <center><u>``Resumo do código``</u></center>\n",
+    "\n",
+    "### <u>Código que pega nos ficheiros da Sonae e cria </u>\n",
     "\n",
     ">### Entra: \n",
     "> - 1_Ninjas\n",
@@ -29,16 +31,16 @@
     "from ipywidgets import interact\n",
     "\n",
     "def escrever_excel(dfa, nome):\n",
-    "    dfa.to_excel(f'D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\GoChill\\\\{nome}.xlsx', index=False)\n",
+    "    dfa.to_excel(f'C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\2.Delta\\\\Sonae\\\\Testes\\\\{nome}.xlsx', index=False)\n",
     "    \n",
     "def escrever_csv(dfa, nome):\n",
-    "    dfa.to_csv(f'D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\GoChill\\\\{nome}.csv', index=False)\n",
+    "    dfa.to_csv(f'C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\2.Delta\\\\Sonae\\\\Testes\\\\{nome}.csv', index=False)\n",
     "    \n",
     "def escrever_txt(dfa, nome):\n",
-    "    dfa.to_csv(f'D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\GoChill\\\\{nome}.txt', sep='\\t', index=False, header=False)\n",
+    "    dfa.to_csv(f'C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\2.Delta\\\\Sonae\\\\Testes\\\\{nome}.txt', sep='\\t', index=False, header=False)\n",
     "    \n",
     "def ler_json(ficheiro):\n",
-    "    with open(f'D:\\\\B&N Dados\\\\Delta\\\\{ficheiro}.json', 'r') as file:\n",
+    "    with open(f'C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\2.Delta\\\\Sonae\\\\Testes\\\\{ficheiro}.json', 'r') as file:\n",
     "        mapa = json.load(file)\n",
     "    return mapa"
    ]
@@ -122,7 +124,7 @@
     "%%time\n",
     "# Ler o ficheiro long com Stocks e Fornecimento\n",
     "\n",
-    "directória = \"D:\\\\B&N Dados\\\\Delta\\\\Padrão\\\\GoChill\\\\\"\n",
+    "directória = \"C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\2.Delta\\\\Sonae\\\\Diario\\\\\"\n",
     "num_bases = 1\n",
     "\n",
     "prefixo = \"1_Ninjas\"\n",
@@ -586,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
