--- a/Sonae/Produto_Final/1. DiárioCH.ipynb
+++ b/Sonae/Produto_Final/1. DiárioCH.ipynb
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=green>Ficheiro Lido<font>"
+    "# <font color=Blue>Ficheiros Juntos<font>"
    ]
   },
   {
