--- a/Sonae/Diario/3. Dia_e_Mes_e_120dias.ipynb
+++ b/Sonae/Diario/3. Dia_e_Mes_e_120dias.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resumo do código\n",
+    "# Resumo do código cocó\n",
     "\n",
     "### <u>Código que gera os ficheiros para estudo do comportamento da Delta</u>\n",
     "---\n",
