--- a/Sonae/Diario/1. DiárioCH.ipynb
+++ b/Sonae/Diario/1. DiárioCH.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Resumo do código xixi\n",
+    "# Resumo do código Alteração\n",
     "\n",
     "### <u>Código que gera os ficheiros para estudo do comportamento da Delta</u>\n",
     "---\n",
