A unificar codigo stocks

--- a/Sonae/Stocks/Stocks2023/3_Stocks_Delta_2023.ipynb
+++ b/Sonae/Stocks/Stocks2023/3_Stocks_Delta_2023.ipynb
@@ -635,6 +635,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dfTotal[\"SELLOUT_1_Dias_Antes\"] = np.where(dfTotal[\"SELLOUT_1_Dias_Antes\"]<0, 0, dfTotal[\"SELLOUT_1_Dias_Antes\"])\n",
     "dfTotal['SELLOUT'] = dfTotal.groupby([\"STORE\",\"EAN\"])['SELLOUT_1_Dias_Antes'].shift(-1)\n",
     "dfTotal['STOCK'] = dfTotal.groupby([\"STORE\",\"EAN\"])['STOCK_1_Dias_Antes'].shift(-1)\n",
     "dfTotal['INTRANSIT'] = dfTotal.groupby([\"STORE\",\"EAN\"])['INTRANSIT_1_Dias_Antes'].shift(-1)\n",
@@ -734,239 +735,6 @@
    "metadata": {},
    "source": [
     "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#  <span style=\"color:red\"><u>Ler Ficheiro Completo</u> </span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 4.27 s\n",
-      "Wall time: 5.42 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "#Ler os ficheiros\n",
-    "\n",
-    "#df_2022 = pd.read_csv('D:\\\\B&N Dados\\\\Delta\\\\Stocks\\\\Stocks2022\\\\Stocks_Delta_2022_Limpo.csv')\n",
-    "df_2023 = pd.read_csv('D:\\\\B&N Dados\\\\Delta\\\\Stocks\\\\Stocks2023\\\\Stocks_Delta_2023_Limpo.csv')\n",
-    "\n",
-    "#df_Prophet = pd.read_csv('C:\\\\Users\\\\joao_\\\\OneDrive\\\\Ambiente de Trabalho\\\\B&N Código\\\\Delta\\\\Forecasting\\\\Prophet.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['AZEITONA BRITADA QAMPO 5KG CC',\n",
-       " 'AZEITONA GALEGA QAMPO FR 210G',\n",
-       " 'AZEITONA GORDAL 210G',\n",
-       " 'AZEITONA PRETA OXID DESC FRA QAMPO 160 G',\n",
-       " 'AZEITONA RETALHADA 210G QAMPO',\n",
-       " 'AZEITONA SELECCIONADA DOP QAMPO 200G',\n",
-       " 'AZEITONA VERDE DESC FRASCO QAMPO  160 G',\n",
-       " 'BARRA CROFFEE CAF AMEND. CHOCO 3*30G',\n",
-       " 'BARRA CROFFEE CAF CARAM SALG 5*22G',\n",
-       " 'BARRA CROFFEE CAF. AVEIA CAN AME 5*22G',\n",
-       " 'BEBIDA CEREAIS DELTA C/20%CAFE FR 200G',\n",
-       " 'BEBIDA CEREAIS DELTA CEREAIS+FIBRA 200G',\n",
-       " 'CACAU EM PÓ DELTA 5*25 GR',\n",
-       " 'CAFE BELLISSIMO OR 200G',\n",
-       " 'CAFFELATTE GO CHILL DELTA 230 ML',\n",
-       " 'CAFÉ ANGOLA DELTA 16 PAST',\n",
-       " 'CAFÉ BELLISSIMO AROMA INTENSO 30CAP',\n",
-       " 'CAFÉ BELLISSIMO DECAF10 CAPS',\n",
-       " 'CAFÉ BELLISSIMO INTENSO 10 CAP',\n",
-       " 'CAFÉ BELLISSIMO INTENSO 200GR',\n",
-       " 'CAFÉ BELLISSIMO ORIGINALE 10 CAP',\n",
-       " 'CAFÉ DELTA BIO MOAGEM UNIVERSAL 220G',\n",
-       " 'CAFÉ DELTA CEVADA CHICÓRIA CENTEIO 200G',\n",
-       " 'CAFÉ DELTA CHICÓRIA + SOLÚVEL LATA 250',\n",
-       " 'CAFÉ DELTA CHÁVENA ÚNICA 2*250G',\n",
-       " 'CAFÉ DELTA COLÔMBIA GRÃO 220 G',\n",
-       " 'CAFÉ DELTA DESC M UNIVERSAL 220G',\n",
-       " 'CAFÉ DELTA DESCAFEÍNADO 16PAST',\n",
-       " 'CAFÉ DELTA DRIP COFFEE 5X9 GR',\n",
-       " 'CAFÉ DELTA EXPRESSO BAR GRAO 1KG',\n",
-       " 'CAFÉ DELTA GOLD GRÃO 500G',\n",
-       " 'CAFÉ DELTA INDIA MU 220G',\n",
-       " 'CAFÉ DELTA LOTE CHÁVENA 16PAST',\n",
-       " 'CAFÉ DELTA LOTE CHÁVENA GRÃO 1KG',\n",
-       " 'CAFÉ DELTA LOTE CHÁVENA GRÃO 250G',\n",
-       " 'CAFÉ DELTA LOTE SUPERIOR GRÃO 1KG',\n",
-       " 'CAFÉ DELTA MOAGEM UNIVER COLOMBIA 220G',\n",
-       " 'CAFÉ DELTA MOAGEM UNIVER INDONESIA 220G',\n",
-       " 'CAFÉ DELTA MOAGEM UNIVERSAL ANGOLA 220G',\n",
-       " 'CAFÉ DELTA MOAGEM UNIVERSAL BRASIL 220G',\n",
-       " 'CAFÉ DELTA MOAGEM UNIVERSAL TIMOR 220G',\n",
-       " 'CAFÉ DELTA MOAGEM UNIVERSAL VIETNAM 220G',\n",
-       " 'CAFÉ DELTA PLATINUM 16PAST',\n",
-       " 'CAFÉ DELTA PLATINUM GRAO 500G',\n",
-       " 'CAFÉ DELTA PLATINUM M ÚNICA LATA 250G',\n",
-       " 'CAFÉ DELTA PORTUGAL MU 220G',\n",
-       " 'CAFÉ DELTA Q AQTIVUS 10CAP',\n",
-       " 'CAFÉ DELTA Q BIO 10CAP',\n",
-       " 'CAFÉ DELTA Q BRASIL 10CAP',\n",
-       " 'CAFÉ DELTA Q CANELA 10CAP',\n",
-       " 'CAFÉ DELTA Q COMENDADOR 10 CAP',\n",
-       " 'CAFÉ DELTA Q DEQAFEINATUS 10CAP',\n",
-       " 'CAFÉ DELTA Q DEQAFEINATUS XL 40CAP',\n",
-       " 'CAFÉ DELTA Q DOUBLE 10CAP',\n",
-       " 'CAFÉ DELTA Q EPIQ 10 CAP',\n",
-       " 'CAFÉ DELTA Q EPIQ 80CAP',\n",
-       " 'CAFÉ DELTA Q EQO 10CAP',\n",
-       " 'CAFÉ DELTA Q ETHIOPIA 10CAP',\n",
-       " 'CAFÉ DELTA Q JAMAICA 10CAP',\n",
-       " 'CAFÉ DELTA Q KENYA 10CAP',\n",
-       " 'CAFÉ DELTA Q MYTHIQ 10CAP',\n",
-       " 'CAFÉ DELTA Q MYTHIQ 80CAP',\n",
-       " 'CAFÉ DELTA Q MYTHIQ XL 40CAP',\n",
-       " 'CAFÉ DELTA Q ORIGENS 40 CAP',\n",
-       " 'CAFÉ DELTA Q QALIDUS 10CAP',\n",
-       " 'CAFÉ DELTA Q QALIDUS 40CAP',\n",
-       " 'CAFÉ DELTA Q QALIDUS 80CAP',\n",
-       " 'CAFÉ DELTA Q QALIDUS DESC 10 CAP',\n",
-       " 'CAFÉ DELTA Q QHARACTER 10CAP',\n",
-       " 'CAFÉ DELTA Q QHARACTER 40CAP',\n",
-       " 'CAFÉ DELTA Q QHARACTER 80CAP',\n",
-       " 'CAFÉ DELTA Q QHARISMA 10 CAP',\n",
-       " 'CAFÉ DELTA Q QIDS 10CAP',\n",
-       " 'CAFÉ DELTA Q QONVICTUS 10CAP',\n",
-       " 'CAFÉ DELTA Q ROAST COL DARK 10CAP',\n",
-       " 'CAFÉ DELTA Q ROAST COL MEDIUM 10CAP',\n",
-       " 'CAFÉ DELTA Q ROAST COL SMOOTH 10UNID',\n",
-       " 'CAFÉ DELTA Q TANZANIA 10CAP',\n",
-       " 'CAFÉ DELTA Q TIMOR 10CAP',\n",
-       " 'CAFÉ DELTA Q VIETNAM 10 CAP',\n",
-       " 'CAFÉ DELTA RITUAL MU 220G',\n",
-       " 'CAFÉ DELTA SOLÚVEL CREME 160 G',\n",
-       " 'CAFÉ DELTA SOLÚVEL CREME 80 GR',\n",
-       " 'CAFÉ DELTA SOLÚVEL INTENSO 200GR',\n",
-       " 'CAFÉ DELTA SOLÚVEL S/CAFEINA FR 100G',\n",
-       " 'CAFÉ GINGA 10CAP',\n",
-       " 'CAFÉ MISTURA DELTA IBÉRICA M MÁQ 250G',\n",
-       " 'CAFÉ MISTURA DELTA PENINSULAR M MÁQ 250G',\n",
-       " 'CAFÉ MOÍDO MÁQUINA CHÁVENA DELTA 250G',\n",
-       " 'CAFÉ MOÍDO SACO CHÁVENA DELTA 250G',\n",
-       " 'CAFÉ SOL DELTA GRANCAFE GOLD FR 200G',\n",
-       " 'CAFÉ SOLÚVEL DELTA C/CAFÉINA 10*2G',\n",
-       " 'CAFÉ SOLÚVEL DELTA CAPPUCCINO 10*14G',\n",
-       " 'CAFÉ SOLÚVEL DELTA FRASCO 100G',\n",
-       " 'CAFÉ SOLÚVEL DELTA FRASCO 200G',\n",
-       " 'CAFÉ SOLÚVEL DELTA GRANCAFE GOLD 100G',\n",
-       " 'CAFÉ SOLÚVEL DELTA INTENSO FRASCO 100G',\n",
-       " 'CAFÉ SOLÚVEL DELTA PACK POUP 2*200G',\n",
-       " 'CAFÉ TORRADO RITUAL DELTA GRÃO  500G',\n",
-       " 'CAFÉS DELTA CEVADA + CHICÓRIA 200GR',\n",
-       " 'CAPPUCCINO GO CHILL DELTA 230 ML',\n",
-       " 'CARAMEL MACCHIATO GO CHILL DELTA 230ML',\n",
-       " 'CERV C/ALC BUDWEISER TP 25CL',\n",
-       " 'CERV C/ALC CORONITA 21 CL',\n",
-       " 'CERV C/ALC FRANZISKANER TP 35,5CL',\n",
-       " 'CERV. C/ALC. FRANZISKANER DUNKEL TP 50CL',\n",
-       " 'CERV. C/ALC. T/P BUD 33CL',\n",
-       " 'CERV.C/ALC.LEFFE BLONDE 33CL',\n",
-       " 'CERV.C/ALC.T/P CORONA 35,5CL',\n",
-       " 'CERV.C/ALC.T/P FRANZISKANER WEISSBI.50CL',\n",
-       " \"CERV.C/ALCCOL T/P BECK'S 27.5 CL\",\n",
-       " 'CERV.C/ÁLC.LEFFE TP BRUNE 33CL',\n",
-       " 'CERV.C/ÁLC.STELLA ARTOIS TP 33 CL',\n",
-       " 'CERVEJA C/ALCOOL HOEGAARDEN 33CL',\n",
-       " 'CEVADA DELTA ESPECIAL M MÁQUINA 250G',\n",
-       " 'CEVADA DELTA Q PURE 10CAP',\n",
-       " 'CEVADA SOLÚVEL DELTA FRASCO 200G',\n",
-       " 'CHA TETLEY MAÇA E CANELA 10SAQ',\n",
-       " 'CHA TETLEY VERDE MATCHA 20 SAQ',\n",
-       " 'CHÁ MIRTILO MATCHA TETLEY 20 SAQ',\n",
-       " 'CHÁ TETLEY CAMOMILA 10SAQ',\n",
-       " 'CHÁ TETLEY CIDREIRA 10SAQ',\n",
-       " 'CHÁ TETLEY CIDREIRA 20SAQ',\n",
-       " 'CHÁ TETLEY CIDREIRA MEL 10SAQ',\n",
-       " 'CHÁ TETLEY COLD ARANDO&LIMA 10SAQ',\n",
-       " 'CHÁ TETLEY COLD LIMÃO LIMA 10SAQ',\n",
-       " 'CHÁ TETLEY COLD MIRTILO MAÇÃ 10SAQ',\n",
-       " 'CHÁ TETLEY COLD MORANGO E MANGA 10SAQ',\n",
-       " 'CHÁ TETLEY COLD MORANGO E MAÇÃ 10 SAQ',\n",
-       " 'CHÁ TETLEY HIBISCO ROSA MOSQUETA 20SAQ',\n",
-       " 'CHÁ TETLEY HIBISCUS MIRTILO FRA.20SAQ',\n",
-       " 'CHÁ TETLEY LÚCIA LIMA 10SAQ',\n",
-       " 'CHÁ TETLEY MAÇÃ E CANELA 10SAQ',\n",
-       " 'CHÁ TETLEY MENTA 10SAQ',\n",
-       " 'CHÁ TETLEY PRETO 10SAQ',\n",
-       " 'CHÁ TETLEY PRETO 20SAQ',\n",
-       " 'CHÁ TETLEY PRETO DESCAFEÍNADO 10SAQ',\n",
-       " 'CHÁ TETLEY SUPERTEA DEFFENCE 20 SAQ',\n",
-       " 'CHÁ TETLEY SUPERTEA DIGESTION 20SAQ',\n",
-       " 'CHÁ TETLEY SUPERTEA SWEETDREAMS 20SAQ',\n",
-       " 'CHÁ TETLEY TÍLIA 10SAQ',\n",
-       " 'CHÁ TETLEY VERDE 10SAQ',\n",
-       " 'CHÁ TETLEY VERDE 30G 20SAQ',\n",
-       " 'CHÁ TETLEY VERDE DETOX MENTA 20SAQ',\n",
-       " 'CHÁ VERDE TETLEY MEL E LIMÃO 10SAQ',\n",
-       " 'CHÁ VERDE TETLEY SUAVE AMORA FRAMB 10SAQ',\n",
-       " 'CHÁ VERDE TETLEY SUAVE MENTA 10SAQ',\n",
-       " 'DOUBLE ESPRESSO GO CHILL DELTA 230ML',\n",
-       " 'GG VT AD MAYOR RES COMENDAD REG ALEN 75C',\n",
-       " 'INF TETLEY BOOST VIT BPRETO 20SAQ',\n",
-       " 'INF TETLEY BOOST VITB ARANDO&FRAM 20SAQ',\n",
-       " 'INFUSÃO TETLEY CAMOMILA 20SAQ',\n",
-       " 'INFUSÃO TETLEY FRUTOS VERMELHOS 10SAQ',\n",
-       " 'INFUSÃO TETLEY FRUTOS VERMELHOS 20SAQ',\n",
-       " 'INFUSÃO TETLEY IMUNE VIT LIMAO 20SAQ',\n",
-       " 'INFUSÃO TETLEY MIRTILO&AÇAI 20SAQ',\n",
-       " 'INFUSÃO TETLEY ROMÃ&FRAMB 20SAQ',\n",
-       " 'LATTE MACCHIATO GO CHILL S/LAC 230ML',\n",
-       " 'PACK CAFÉ DELTA Q EPIQ 60CAP',\n",
-       " 'PACK CAFÉ DELTA Q GRAND EPIQ 72+8 CAP',\n",
-       " 'PACK CAFÉ DELTA Q GRAND MYTHIQ 72+8 CAP',\n",
-       " 'PACK CAFÉ DELTA Q GRAND QALIDUS 72+8 CAP',\n",
-       " 'PACK CAFÉ DELTA Q INTENSIDADE 40CAP',\n",
-       " 'PACK CAFÉ DELTA Q MYTHIQ XXL 60 CAP',\n",
-       " 'PACK CAFÉ DELTA Q QALIDUS 60CAP',\n",
-       " 'PACK CAFÉ DELTA Q QHARACTER 60CAP',\n",
-       " 'PACK CAFÉ DELTA Q QHARISMA 40 CAP',\n",
-       " 'QIT MAQUINAS +CÁPSULAS DELTA Q',\n",
-       " 'REF C/GÁS FRAMBOESA TOMILHO WHY NOT 33CL',\n",
-       " 'REF C/GÁS PÊSSEGO GENGIBRE WHY NOT 33CL',\n",
-       " 'REF. C/GÁS COLA NATURAL WHY NOT 33CL',\n",
-       " \"SODA ARTESAN LEMON'MATE WHYNOT BIO 33CL\",\n",
-       " 'TISANAS DELTA Q PURIFY 10CAP',\n",
-       " 'TISANAS DELTA Q RELAX 10CAP',\n",
-       " 'TREMOÇO EXTRA 235G',\n",
-       " 'VB AD MAYOR RES COMENDAD REG ALENT 75',\n",
-       " 'VB ADEGA MAYOR RES REG ALENT 75CL',\n",
-       " 'VB DIZERES ADEGA MAYOR ALENTEJO 75CL',\n",
-       " 'VT ADEGA MAYOR RES REG ALENT 75CL',\n",
-       " 'VT ADEGA MAYOR TN REG ALENT 75CL',\n",
-       " 'VT DIZERES ADEGA MAYOR ALENTEJO 75CL']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_2023.DESC_ARTIGO.unique().tolist()"
    ]
   },
   {
