--- a/Sonae/Diario/3. Delta_Dia_e_Mes_e_120dias.ipynb
+++ b/Sonae/Diario/3. Delta_Dia_e_Mes_e_120dias.ipynb
@@ -82,8 +82,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 2.81 s\n",
-      "Wall time: 6.52 s\n"
+      "CPU times: total: 2.67 s\n",
+      "Wall time: 7.69 s\n"
      ]
     }
    ],
@@ -91,11 +91,11 @@
     "%%time\n",
     "\n",
     "#Ler os ficheiros\n",
-    "#df_2022 = pd.read_csv('C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\Dados\\\\2.Delta\\\\Sonae\\\\Stocks\\\\Stocks_Delta_2022_Limpo.csv')\n",
-    "df_2023 = pd.read_csv('C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\Dados\\\\2.Delta\\\\Sonae\\\\Stocks\\\\Stocks_Delta_2023_Até_Outubro_Limpo.csv')\n",
+    "df_2022 = pd.read_csv('C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\Dados\\\\2.Delta\\\\Sonae\\\\Stocks\\\\Stocks_Delta_2022_Limpo.csv')\n",
+    "#df_2023 = pd.read_csv('C:\\\\Users\\\\Chip7\\\\Desktop\\\\B&N\\\\Dados\\\\2.Delta\\\\Sonae\\\\Stocks\\\\Stocks_Delta_2023_Até_Outubro_Limpo.csv')\n",
     "\n",
     "# Juntar as bases\n",
-    "dataframes = [df_2023]\n",
+    "dataframes = [df_2022]\n",
     "df_Fusão = pd.concat(dataframes, ignore_index=True)\n",
     "\n",
     "df_Fusão['DATA']= pd.to_datetime(df_Fusão['DATA'], format='%Y-%m-%d')\n",
@@ -112,41 +112,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<DatetimeArray>\n",
-       "['2023-06-17 00:00:00', '2023-06-18 00:00:00', '2023-06-19 00:00:00',\n",
-       " '2023-06-20 00:00:00', '2023-06-21 00:00:00', '2023-06-22 00:00:00',\n",
-       " '2023-06-23 00:00:00', '2023-06-24 00:00:00', '2023-06-25 00:00:00',\n",
-       " '2023-06-26 00:00:00',\n",
-       " ...\n",
-       " '2023-10-21 00:00:00', '2023-10-22 00:00:00', '2023-10-23 00:00:00',\n",
-       " '2023-10-24 00:00:00', '2023-10-25 00:00:00', '2023-10-26 00:00:00',\n",
-       " '2023-10-27 00:00:00', '2023-10-28 00:00:00', '2023-10-29 00:00:00',\n",
-       " '2023-10-30 00:00:00']\n",
-       "Length: 279, dtype: datetime64[ns]"
+       "['DATA',\n",
+       " 'EAN',\n",
+       " 'DESC_ARTIGO',\n",
+       " 'STORE',\n",
+       " 'STORE_NAME',\n",
+       " 'STOCK',\n",
+       " 'SELLOUT',\n",
+       " 'INTRANSIT',\n",
+       " 'EXPECTED',\n",
+       " 'PRES_STOCK',\n",
+       " 'FLUXO']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_Fusão.DATA.unique()"
+    "dfFinal.columns.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfFinal = df_Fusão[df_Fusão.DATA>=\"2023-06-01\"].copy()\n",
+    "dfFinal = df_Fusão[['DATA',\n",
+    "                     'EAN',\n",
+    "                     'DESC_ARTIGO',\n",
+    "                     'STORE',\n",
+    "                     'STORE_NAME',\n",
+    "                     'STOCK',\n",
+    "                     'SELLOUT',\n",
+    "                     'INTRANSIT',\n",
+    "                     'EXPECTED',\n",
+    "                     'PRES_STOCK',\n",
+    "                     'FLUXO']].copy()#df_Fusão[df_Fusão.DATA>=\"2023-06-01\"].copy()\n",
     "dfFinal = dfFinal.sort_values(by = [\"DATA\", \"STORE\", \"DESC_ARTIGO\"])"
    ]
   },
@@ -1116,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,16 +1143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A base Delta_dbd_120dias foi exportada para o clickhouse\n",
-      "CPU times: total: 20.3 s\n",
-      "Wall time: 3min 36s\n"
+      "A base Delta_Sellout_2022 foi exportada para o clickhouse\n",
+      "CPU times: total: 7.92 s\n",
+      "Wall time: 37.1 s\n"
      ]
     }
    ],
